--- a/index.html
+++ b/index.html
@@ -11,5 +11,48 @@
 </head>
 <body>
 
+  <main>
+
+    <h1 class="push-0 island-1-2">Prehistoric mammals</h1>
+
+    <ol class="grid">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+        <div class="card">
+          <img class="img-flex" src="images/arsinoitherium.jpg" alt="#">
+          <h2>Arsinoitherium</h2>
+          <p>Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lives in northern Africa from 36 to 30 million years ago.</p>
+          <a href="#">Learn more about Arsinoitherium</a>
+        </div>
+      </li>
+
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+        <div class="card">
+          <img class="img-flex" src="images/elasmotherium.jpg" alt="#">
+          <h2>Elasmotherium</h2>
+          <p>Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
+          <a href="#">Learn more about Elasmotherium</a>
+        </div>
+      </li>
+
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+        <div class="card">
+          <img class="img-flex" src="images/glyptodon.jpg" alt="#">
+          <h2>Glyptodon</h2>
+          <p>Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
+          <a href="#">Learn more about Glyptodon</a>
+        </div>
+      </li>
+
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+        <div class="card">
+          <img class="img-flex" src="images/megatherium.jpg" alt="#">
+          <h2>Megatherium</h2>
+          <p>Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
+          <a href="#">Learn more about Megatherium</a>
+        </div>
+      </li>
+    </ol>
+  </main>
+
 </body>
 </html>
