adding things for markbot

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <h1 class="push-0 island-1-2">Prehistoric mammals</h1>
 
-    <ol class="grid">
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+    <ol class="grid grid-stretch gutter-1-4 pad-t-1-4">
+      <li class="unit unit-content-distribute [xs-1 s-1 m-1-2 l-1-2] gutter-1-4 push-1-4">
         <div class="card">
           <img class="img-flex" src="images/arsinoitherium.jpg" alt="#">
           <h2>Arsinoitherium</h2>
@@ -25,7 +25,7 @@
         </div>
       </li>
 
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+      <li class="unit unit-content-distribute [xs-1 s-1 m-1-2 l-1-2] gutter-1-4 push-1-4">
         <div class="card">
           <img class="img-flex" src="images/elasmotherium.jpg" alt="#">
           <h2>Elasmotherium</h2>
@@ -34,7 +34,7 @@
         </div>
       </li>
 
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+      <li class="unit unit-content-distribute [xs-1 s-1 m-1-2 l-1-2] gutter-1-4 push-1-4">
         <div class="card">
           <img class="img-flex" src="images/glyptodon.jpg" alt="#">
           <h2>Glyptodon</h2>
@@ -43,7 +43,7 @@
         </div>
       </li>
 
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+      <li class="unit unit-content-distribute [xs-1 s-1 m-1-2 l-1-2] gutter-1-4 push-1-4">
         <div class="card">
           <img class="img-flex" src="images/megatherium.jpg" alt="#">
           <h2>Megatherium</h2>
