--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <ol class="grid grid-stretch gutter-1-4 pad-t-1-4">
       <li class="unit unit-content-distribute [xs-1 s-1 m-1-2 l-1-2] gutter-1-4 push-1-4">
-        <div class="card">
+        <div class="card island-1-2 unit-content-distribute content-fill">
           <img class="img-flex" src="images/arsinoitherium.jpg" alt="#">
           <h2>Arsinoitherium</h2>
           <p>Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lives in northern Africa from 36 to 30 million years ago.</p>
@@ -26,7 +26,7 @@
       </li>
 
       <li class="unit unit-content-distribute [xs-1 s-1 m-1-2 l-1-2] gutter-1-4 push-1-4">
-        <div class="card">
+        <div class="card island-1-2 unit-content-distribute content-fill">
           <img class="img-flex" src="images/elasmotherium.jpg" alt="#">
           <h2>Elasmotherium</h2>
           <p>Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
@@ -35,7 +35,7 @@
       </li>
 
       <li class="unit unit-content-distribute [xs-1 s-1 m-1-2 l-1-2] gutter-1-4 push-1-4">
-        <div class="card">
+        <div class="card island-1-2 unit-content-distribute content-fill">
           <img class="img-flex" src="images/glyptodon.jpg" alt="#">
           <h2>Glyptodon</h2>
           <p>Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
@@ -44,7 +44,7 @@
       </li>
 
       <li class="unit unit-content-distribute [xs-1 s-1 m-1-2 l-1-2] gutter-1-4 push-1-4">
-        <div class="card">
+        <div class="card island-1-2 unit-content-distribute content-fill">
           <img class="img-flex" src="images/megatherium.jpg" alt="#">
           <h2>Megatherium</h2>
           <p>Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
